# chat-with-nerf

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  agent.py  app.py  grounder.py  pyproject.toml  requirements.txt  run-mypy  system_prompt.py
chat_with_nerf/: __init__.py  app.py  settings.py  util.py
chat_with_nerf/chat/: agent.py  app.py  grounder.py  session.py  system_prompt.py  util.py
chat_with_nerf/chat_with_nerf_eval/: evaluate_embedding.ipynb  evaluate_mesh.ipynb  evaluate_no_gpt.ipynb  evaluate_with_gpt.ipynb  evaluation.ipynb  evaluation_conversion.ipynb
chat_with_nerf/model/: model_context.py  scene.py  scene_config.py  util.py
chat_with_nerf/visual_grounder/: blip2_caption.py  camera_pose.py  captioner.py  crop.py  image_ref.py  main.py  picture_taker.py  visual_grounder.py
data/home_1/: home_1.yaml
data/home_2/: home_2.yaml
data/office/: office.yaml
experiments/: evaluate_baseline_openscene.ipynb  evaluate_lerf_14_with_gpt.ipynb  evaluation.md  evaluation_vis_util.py  evaluation_with_gpt_openscene_no_visual_feedback.ipynb  evaluation_without_gpt_lerf_final.ipynb  utils.py
grounder_images/clip/: clip0.npy  clip1.npy  clip2.npy  clip3.npy  clip4.npy  clip5.npy
nerf_grounding_chat_interface/: __init__.py  agent.py  app.py  grounder.py  system_prompt.py
nerf_grounding_chat_interface/chat/: agent.py  app.py  config.py  grounder.py  grounding_demo.ipynb  model_context.py
nerf_grounding_chat_interface/model/: model_context.py
nerf_grounding_chat_interface/visual_grounder/: __init__.py  blip2_caption.py  crop.py  dev.ipynb  image_ref.py  main.py  settings.py  visual_grounder.py
notebooks/: blip2_instructed_generation.ipynb  dev_model.ipynb  llava_captioner.ipynb
tests/: test_app.py
tests/chat/: test_app.py  test_grounder.py
