[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["chat_with_nerf"]

[project]
name = "chat_with_nerf"
version = "0.1.0"
description = "Chat with NeRF"
readme = "README.md"
requires-python = ">=3.10.0"
license = { text="Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "pyyaml",
    "numpy",
    "attrs",
    "gradio",
    "torch",
    "salesforce-lavis",
    "Pillow",
    "torchtyping",
    "nerfstudio",
    "lerf",
    "types-requests"
]

[project.optional-dependencies]

dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "gitlint",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "ipdb",
    "types-Pillow",
    "types-PyYAML",
    "types-requests",
    "types-urllib3"
]
