[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["chat_with_nerf"]

[project]
name = "chat_with_nerf"
version = "0.1.0"
description = "Chat with NeRF"
readme = "README.md"
requires-python = ">=3.10.0"
license = { text="Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "setuptools>=67.7.2",
    "pathtools>=0.1.2",
    "promise>=2.3",
    "pybind11>=2.10.4",
    "pyyaml>=6.0",
    "numpy>=1.24.3",
    "attrs>=23.1.0",
    "omegaconf>=2.3.0",
    "gradio>=3.30.0",
    "torch",
    "Pillow>=9.5.0",
    "torchtyping",
    "nerfstudio<=0.2.1",
    "lerf>=0.1.0",
    "cattrs",
    "types-requests",
    "einops==0.6.1"
]

[project.optional-dependencies]

dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "gitlint",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "ipdb",
    "types-Pillow",
    "types-PyYAML",
    "types-requests",
    "types-urllib3"
]
